--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 A Serpente
-
-
-
+Snake, o famoso jogo da cobrinha, virou febre no Brasil ao estourar nos antigos celulares da Nokia.
+Inspirado no arcade Blockade, o game ganhou centenas de versões com o passar dos anos, várias delas disponíveis para dispositivos Android e iOS.
 
 
 
