--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@ Snake, o famoso jogo da cobrinha, virou febre no Brasil ao estourar nos antigos 
 Inspirado no arcade Blockade, o game ganhou centenas de versões com o passar dos anos, várias delas disponíveis para dispositivos Android e iOS.
 O jogo da cobrinha tem uma longa trajetória. No ano de 1976, ele foi desenvolvido pelo grupo Gremlin Interactive e tinha como nome “Blockade”.
 À época, foi lançado para fliperamas e era monocromático.
-
-
+O Jogo da Serpente é um material que tem como objetivo embasar o conhecimento adquirido do significado de uma dezena.
+Nesta atividade a criança descobre todas as possíveis maneiras de se construir uma dezena com os números de 1 a 9.
 ,
