--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-A Serpente
+<title> Serpente</title> 
 Snake, o famoso jogo da cobrinha, virou febre no Brasil ao estourar nos antigos celulares da Nokia.
 Inspirado no arcade Blockade, o game ganhou centenas de versões com o passar dos anos, várias delas disponíveis para dispositivos Android e iOS.
 O jogo da cobrinha tem uma longa trajetória. No ano de 1976, ele foi desenvolvido pelo grupo Gremlin Interactive e tinha como nome “Blockade”.
