--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<!DOCTYPE html>
+<html>
+      <head>
+
 <h1> Serpente</h1>
 Snake, o famoso jogo da cobrinha, virou febre no Brasil ao estourar nos antigos celulares da Nokia.
 Inspirado no arcade Blockade, o game ganhou centenas de versões com o passar dos anos, várias delas disponíveis para dispositivos Android e iOS.
@@ -5,4 +9,4 @@ O jogo da cobrinha tem uma longa trajetória. No ano de 1976, ele foi desenvolvi
 À época, foi lançado para fliperamas e era monocromático.
 O Jogo da Serpente é um material que tem como objetivo embasar o conhecimento adquirido do significado de uma dezena.
 Nesta atividade a criança descobre todas as possíveis maneiras de se construir uma dezena com os números de 1 a 9.
-,
+
